--- a/Math/线性代数/几何变换.md
+++ b/Math/线性代数/几何变换.md
@@ -6,11 +6,13 @@ L(\alpha\boldsymbol{v}_1 + \beta\boldsymbol{v}_2) = \alpha L(\boldsymbol{v}_1) +
 $$
 **线性变换 `linear transformation`**是线性空间到自身的线性映射，是一种特殊的线性映射。线性变换是在同一个坐标系中完成的图像变换，线性变换产生**“平行且等距”**的网格，并且**原点保持固定**。
 
-<img src="./_Resources/transformation/transformation_002.png" style="zoom:25%;" />
+<img src="../_Resources/transformation/transformation_002.png" style="zoom:25%;" />
 
 ### 1. 平移 `translation`
 
-平移**不是线性变换**，是一种**仿射变换`affine transformation`**，对应的运算是 $\boldsymbol{y} = \boldsymbol{A}\boldsymbol{x} + \boldsymbol{b}$。从几何视角看，仿射变换是一个向量空间的线性映射（$\boldsymbol{A}\boldsymbol{x}$）叠加平移（$\boldsymbol{b}$），变换结果在另外一个仿射空间。$\boldsymbol{b} \neq \boldsymbol{0}$，平移导致原点位置发生变化，线性变换可以看做特殊的仿射变换。
+平移**不是线性变换**，是一种**仿射变换`affine transformation`**，因为原点发生了变动。
+
+对应的运算是 $\boldsymbol{y} = \boldsymbol{A}\boldsymbol{x} + \boldsymbol{b}$，从几何视角看，仿射变换是一个向量空间的线性映射（$\boldsymbol{A}\boldsymbol{x}$）叠加平移（$\boldsymbol{b}$），变换结果在另外一个仿射空间。$\boldsymbol{b} \neq \boldsymbol{0}$，平移导致原点位置发生变化，线性变换可以看做特殊的仿射变换。
 $$
 \begin{bmatrix} z_1 \\ z_2 \end{bmatrix} = \begin{bmatrix} x_1 \\ x_2 \end{bmatrix} + \begin{bmatrix} t_1 \\ t_2 \end{bmatrix}
 $$
@@ -37,15 +39,14 @@ $$
 
 $\boldsymbol{e}_1$ 和 $\boldsymbol{e}_2$ 逆时针旋转 $\theta$ 分别得到 $\boldsymbol{r}_1$ 和 $\boldsymbol{r}_2$
 
-<img src="./_Resources/transformation/trans_detail_06.png" style="zoom:40%;" />
+<img src="../_Resources/transformation/trans_detail_06.png" style="zoom:40%;" />
 $$
 \boldsymbol{r}_1 = \begin{bmatrix} \cos\theta \\ \sin\theta \end{bmatrix}, \quad \boldsymbol{r}_2 = \begin{bmatrix} -\sin\theta \\ \cos\theta \end{bmatrix}\\
 \boldsymbol{R} = \begin{bmatrix} \boldsymbol{r}_1 & \boldsymbol{r}_2 \end{bmatrix} = \begin{bmatrix} \cos{\theta} & -\sin{\theta}\\ \sin{\theta} & \cos{\theta}\end{bmatrix}
 $$
 列向量坐标 $\boldsymbol{x}$ 逆时针旋转 $\theta$ 得到 $\boldsymbol{z}$
 $$
-\begin{bmatrix} z_1 \\ z_2 \end{bmatrix} = \boldsymbol{R} \begin{bmatrix} x_1 \\ x_2 \end{bmatrix}, \quad
-\boldsymbol{R} = \begin{bmatrix} \cos{\theta} & -\sin{\theta}\\ \sin{\theta} & \cos{\theta}\end{bmatrix}
+\begin{bmatrix} z_1 \\ z_2 \end{bmatrix} = \boldsymbol{R} \begin{bmatrix} x_1 \\ x_2 \end{bmatrix} = \begin{bmatrix} \cos{\theta} & -\sin{\theta}\\ \sin{\theta} & \cos{\theta}\end{bmatrix}\begin{bmatrix} x_1 \\ x_2 \end{bmatrix}
 $$
 
 
