--- a/Frontend/001.md
+++ b/Frontend/001.md
@@ -1,3 +1,11 @@
+- 引擎
+- 编译器
+- 作用域
+
+
+
+
+
 **作用域**是一套规则，用于确定在何处以及如何查找变量（标识符），如果查找的目的是对变量进行赋值，那么会使用LHS（Left Hand Side）查询；如果目的是获取变量的值，就会使用RHS（Right Hand Side）查询。
 
 赋值操作符会导致LHS查询，`=`操作符或调用函数时传入参数的操作都会导致关联作用域的赋值操作。
